# bloopnet

./: README.md  bloopnet-cellular-audio-vm.md  bloopnet_libbloop.md  writing-bloops.md
libbloop/: .gitignore  Cargo.toml  README.md
libbloop/crates/bloop-cli/: Cargo.toml
libbloop/crates/bloop-cli/src/: main.rs
libbloop/crates/bloop-core/: Cargo.toml
libbloop/crates/bloop-core/src/: codec.rs  error.rs  lib.rs  pack.rs  symbol.rs  token.rs  validate.rs
libbloop/crates/bloop-core/tests/: codec_tests.rs  pack_tests.rs  token_tests.rs  validation_tests.rs
libbloop/crates/bloop-packet/: Cargo.toml
libbloop/crates/bloop-packet/src/: crc.rs  lib.rs  packet.rs
libbloop/crates/bloop-packet/tests/: packet_tests.rs
libbloop/crates/bloop-wasm/: Cargo.toml
libbloop/crates/bloop-wasm/src/: lib.rs
libbloop/examples/: README.md
libbloop/examples/lora-gateway-skeleton/: Cargo.toml  README.md
libbloop/examples/lora-gateway-skeleton/src/: gateway.rs  main.rs
libbloop/examples/web-terminal/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
libbloop/examples/web-terminal/src/: main.ts  style.css
libbloop/js/bloop-audio-vm/: package-lock.json  package.json  tsconfig.json
libbloop/js/bloop-audio-vm/src/: bloop-audio-vm.ts  index.ts
libbloop/js/bloop-audio-vm/src/audio/: BloopAlphabet.ts  BloopAudioEngine.ts  BloopHash.ts  (+3 more)
libbloop/js/bloop-audio-vm/tests/: element.test.ts  engine.test.ts  hash.test.ts  normalizer.test.ts  vm.test.ts
libbloop/js/bloop-js/: README.md  package.json  tsconfig.json
libbloop/js/bloop-js/src/: index.ts
(+1 files in other folders)
