[workspace]

[package]
name = "bloop-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for bloop-core"

# Not a workspace member — built separately with wasm-pack:
#   cd crates/bloop-wasm && wasm-pack build --target bundler

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bloop-core = { path = "../bloop-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
